stoped text shadow on small screens

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -3,4 +3,7 @@ body {
     overflow: auto;
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
+    color: white;
+    background-color: black;
+    
 }
