--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -14,7 +14,7 @@ nav a {
 
 .links-nav {
     position: relative;
-  }
+}
   
 .links-nav:after{
 content: '';
@@ -23,7 +23,7 @@ width: 0; height: 3px;
 display: block;
 margin-top: 5px;
 right: 0;
-background: #fff;
+background: var(--text-color);
 transition: width .2s ease;
 -webkit-transition: width .2s ease;
 }
@@ -31,7 +31,7 @@ transition: width .2s ease;
 .links-nav:hover:after{
 width: 100%;
 left: 0;
-background: #fff;
+background: var(--text-color);
 }
 
 
